Max width on content blocks to prevent layout issues.

--- a/wp-content/themes/tempestgrove/assets/post/components/blocks/blocks.css
+++ b/wp-content/themes/tempestgrove/assets/post/components/blocks/blocks.css
@@ -212,6 +212,7 @@
     align-items: flex-start;
     justify-content: space-between;
     color: var(--light);
+    width: 100%;
 
     &:before {
         position: absolute;
